--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login"></activity>
-        <activity android:name=".LangSelect" />
+        <activity android:name=".Dashboard"></activity>
+        <activity android:name=".ResetPassword" />
+        <activity android:name=".Registration" />
+        <activity android:name=".login" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".LangSelect" />
         <activity android:name=".splash_screen">
             <intent-filter>
-                <action android:name="android.intent.action.splash_screen" />
+                <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
