activites update and added car rentals and spares updates

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".SpareServices"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".SpareSuccess"></activity>
+        <activity android:name=".SpareParts" />
+        <activity android:name=".FindSpare" />
+        <activity android:name=".ShopSuccess" />
+        <activity android:name=".RegisterShop" />
+        <activity android:name=".DetailedCarActivity" />
+        <activity android:name=".CarRentals" />
+        <activity android:name=".SpareServices" />
         <activity android:name=".MechanicalServices" />
         <activity android:name=".acServices" />
         <activity android:name=".GearboxServices" />
